data/Java/20-missing-paren/4/[M]Error.txt
https://stackify.com/top-java-software-errors/
MyClass.java:5: error: ')' expected
            if (solidom.equalsIgnoreCase("esfera"){
                                                  ^